# SimpleSDXL

./: .gitignore  IllustriousAIO.json  args_manager.py  build_launcher.py  entry_with_update.py  launch.py  model_checker.py  model_checker_模型检测.bat  readme.md  requirements_patch.txt  requirements_versions.txt  shared.py  simplesdxl_log.md  tips.txt  webui.py
.did/: system_E5fne9TZwiDQ8RTfP3Q7cxiP5owLs.did  user_6eR3Pzp9e2VSUC6suwPSycQ93qi6T.did
comfy/: comfy_version.py  execution.py  folder_paths.py  load_file_from_url.py  main.py  nodes.py  server.py
comfy/custom_nodes/Comfy-WaveSpeed/: README.md  __init__.py  fbcache_nodes.py  first_block_cache.py  misc_nodes.py  patchers.py  pyproject.toml  utils.py  velocator_nodes.py
comfy/custom_nodes/Comfy-WaveSpeed/workflows/: flux.json  flux_controlnet.json  hunyuan_video.json  ltxv.json  sd3.5.json  sdxl.json
comfy/custom_nodes/ComfyUI-PuLID-Flux-GR/: GRPulidFlux.py  README.md  __init__.py  face_restoration_helper.py  online_train1.py  online_train2.py  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-PuLID-Flux-GR/eva_clip/: factory.py
comfy/custom_nodes/ComfyUI-PuLID-Flux-GR/examples/: flux pulid enhanced center_face.json
comfy/custom_nodes/ComfyUI_PuLID_Flux_ll/: PulidFluxHook.py  README.md  README_CN.md  encoders_flux.py  patch_util.py  pulidflux.py  pyproject.toml
css/: style.css
enhanced/: all_parameters.py  comfy_task.py  gallery.py  logger.py  minicpm.py  multilingual.py  simpleai.py  superprompter.py  system_CyVsAk3QK3SCmiPJYioMHcyqbyrNF.did  toolbox.py  topbar.py  translator.py  user_7HU8TEXTFcc1vgoRi7PCdsJFBiBgN.did  version.py  wildcards.py
extras/: expansion.py  preprocessors.py
javascript/: localization.js  (+2 more)
(+182 files in other folders)
